--- a/hw5/package.json
+++ b/hw5/package.json
@@ -22,6 +22,11 @@
     "@types/cors": "^2.8.17",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
