--- a/hw5/tsconfig.json
+++ b/hw5/tsconfig.json
@@ -10,6 +10,7 @@
     
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "strictNullChecks" : true
   },
   "ts-node": {
     "compilerOptions": {
